# hoverboard_ros2_control

./: .gitignore  README.md
hoverboard_demo_bringup/: CMakeLists.txt  package.xml
hoverboard_demo_bringup/config/: hoverboard_controllers.yaml  hoverboard_controllers4x4.yaml  ps4.config.yaml
hoverboard_demo_bringup/launch/: 4x4.launch.py  hoverboard.launch.py
hoverboard_demo_description/: CMakeLists.txt  package.xml
hoverboard_demo_description/meshes/: plate.stl
hoverboard_demo_description/rviz/: hoverboard4x4.rviz
hoverboard_demo_description/urdf/: 4x4wheels.xacro  hoverboard_description.xacro  hoverboard_description4x4.xacro  macros.xacro  materials.xacro  ros2_control.xacro  ros2_control4x4.xacro  wheels.xacro
hoverboard_hardware_interface/: CMakeLists.txt  hoverboard_hardware_interface.xml  package.xml
hoverboard_hardware_interface/include/hoverboard_hardware_interface/: hoverboard_hardware_interface.hpp  motor_wheel.hpp  serial_port_protocol.hpp  serial_port_service.hpp
hoverboard_hardware_interface/src/: hoverboard_hardware_interface.cpp  serial_port_service.cpp
hoverboard_ros2_control/: CMakeLists.txt  package.xml
